out
    Blocking waiting for file lock on build directory
   Compiling my-project v0.1.0 (/home/runner/AoC2023)
error[E0277]: expected a `FnMut<(&str,)>` closure, found `Option<u32>`
   --> src/day1.rs:82:11
    |
82  |     many1(flat_map(alt((
    |           ^^^^^^^^ expected an `FnMut<(&str,)>` closure, found `Option<u32>`
    |
    = help: the trait `FnMut<(&str,)>` is not implemented for `Option<u32>`
    = help: the following other types implement trait `Parser<I, O, E>`:
              <Box<(dyn Parser<I, O, E> + 'a)> as Parser<I, O, E>>
              <nom::Map<F, G, O1> as Parser<I, O2, E>>
              <nom::FlatMap<F, G, O1> as Parser<I, O2, E>>
              <AndThen<F, G, O1> as Parser<I, O2, E>>
              <And<F, G> as Parser<I, (O1, O2), E>>
              <Or<F, G> as Parser<I, O, E>>
              <nom::Into<F, O1, O2, E1, E2> as Parser<I, O2, E2>>
    = note: required for `Option<u32>` to implement `Parser<&str, _, _>`
note: required by a bound in `nom::combinator::flat_map`
   --> /home/runner/AoC2023/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nom-7.1.3/src/combinator/mod.rs:213:6
    |
206 | pub fn flat_map<I, O1, O2, E: ParseError<I>, F, G, H>(
    |        -------- required by a bound in this function
...
213 |   H: Parser<I, O2, E>,
    |      ^^^^^^^^^^^^^^^^ required by this bound in `flat_map`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `my-project` (bin "my-project" test) due to previous error
